--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -403,36 +403,34 @@ a{
 .footer p span a:hover {
 	color: #ffa812;
 }
-.go-top {
+#go-top {
 	display: none;
 	position: fixed;
-	bottom: 10px;
-	right: 10px;
-	background: #ff3605;
-	padding: 15px;
-	color: #fff;
-	border-radius: 100%;
+	right: 15px;
+	bottom: 15px;
+	cursor: pointer;
 	width: 50px;
-	height: 50px; 
-	transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -webkit-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
+	height: 50px;
+	background-color: #e4791f;
+	text-indent: -9999px;
+	-webkit-border-radius: 60px;
+	-moz-border-radius: 60px;
+	border-radius: 60px;
 }
-.go-top.show{
-	display: block;
+#go-top span {
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin-left:-8px;
+    margin-top:-12px;
+    height:0;
+    width:0;
+    border:8px solid transparent;
+    border-bottom-color:#ffffff;
 }
-
-.go-top.hide{
-	display: none;
-}
-.go-top i {
-	font-size: 20px;
-	font-weight: 700;
-	margin-left: 5px;
-}
-
-
-.go-top:hover{
-	color: #fff;
+#go-top:hover {
+	background-color: #ff6400;
+	opacity: 1;
+	filter: "alpha(opacity=100)";
+	-ms-filter: "alpha(opacity=100)";
 }
